Changes in <next version>:
 * Add GetColormap command to return RGBA values
 * Add Colormap sequence plugin for choosing colors of widgets
 * Add Covariance widget for plotting covariance ellipses

Changes in 1.24:
 * Text labels can now include Python expressions inside %{{ }}%
 * Added built-in functions DATE([fmt]), TIME([fmt]), FILENAME() and BASENAME()
   when evaluating expressions, which are useful when used in labels
 * Added Python dictionary ENVIRON when evaluating expressions, to obtain
   values from environment variables
 * Added DATA(name, [part]) function to expression environment for accessing
   values from datasets, useful for function evaluation or labels
 * Added SETTING(path) function for expression evaluation to obtain values
   of settings
 * Added ESCAPE(text) function to environment, which allows LaTeX special
   characters to be displayed in labels
 * Add fractions and percentages units to polar plot
 * Allow number of spokes to be varied in polar plot
 * Widgets can be clicked holding down shift or ctrl, to add or toggle their
   selection
 * Add K. Moreland's cool-warm colormap (thanks to S. Richardson)
 * Added further green-map, blue-darkred, blue-darkorange, brown-blue and
   blue-orange colormaps from Oregon geography dept.
 * Add logarithm and exponential dataset plugins
 * Add Wipe() command to embedding interface to clear document
 * Add File->Reload menu option to reload from saved document
 * Add tooltip to items in FieldWidget showing widget path

Bux fixes:
 * Fix transparency with bar plot
 * Use getcwdu() for python2 to avoid bugs combining paths
 * Handle inf/nan when converting to human readable form in plots
 * Fix CreateHistogram on command line without binparams parameter
 * Handle empty 2D dataset import with grid at edge enabled
 * Do not allow error bars on imported CSV non-numeric data
 * Handle missing argument in \size
 * For data edit dialog, allow 1D dataset to replace 2D dataset